force-app/main/default/objects/vaultc3__c/vaultc3__c.object-meta.xml
<CustomObject>
    <label>vaultc3</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vaultc3s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>