force-app/main/default/objects/vaultc3__c/fields/checkbox4__c.field-meta.xml
<CustomField>
    <fullName>checkbox4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox4</label>
    <type>Checkbox</type>
</CustomField>