force-app/main/default/objects/vaultc3__c/fields/checkbox6__c.field-meta.xml
<CustomField>
    <fullName>checkbox6__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox6</label>
    <type>Checkbox</type>
</CustomField>