force-app/main/default/objects/vaultc3__c/fields/currency1__c.field-meta.xml
<CustomField>
    <fullName>currency1__c</fullName>
    <label>Currency1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>