force-app/main/default/objects/vaultc3__c/fields/currency2__c.field-meta.xml
<CustomField>
    <fullName>currency2__c</fullName>
    <label>Currency2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>