force-app/main/default/objects/vaultc3__c/fields/date2__c.field-meta.xml
<CustomField>
    <fullName>date2__c</fullName>
    <label>Date2</label>
    <type>Date</type>
</CustomField>