force-app/main/default/objects/vaultc3__c/fields/email10__c.field-meta.xml
<CustomField>
    <fullName>email10__c</fullName>
    <label>Email10</label>
    <type>Email</type>
</CustomField>