force-app/main/default/objects/vaultc3__c/fields/email5__c.field-meta.xml
<CustomField>
    <fullName>email5__c</fullName>
    <label>Email5</label>
    <type>Email</type>
</CustomField>