force-app/main/default/objects/vaultc3__c/fields/email7__c.field-meta.xml
<CustomField>
    <fullName>email7__c</fullName>
    <label>Email7</label>
    <type>Email</type>
</CustomField>