force-app/main/default/objects/vaultc3__c/fields/geo1__c.field-meta.xml
<CustomField>
    <fullName>geo1__c</fullName>
    <label>Geolocation1</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>