force-app/main/default/objects/vaultc3__c/fields/longTextArea1__c.field-meta.xml
<CustomField>
    <fullName>longTextArea1__c</fullName>
    <label>LongTextArea1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>