force-app/main/default/objects/vaultc3__c/fields/number11__c.field-meta.xml
<CustomField>
    <fullName>number11__c</fullName>
    <label>Number11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>