force-app/main/default/objects/vaultc3__c/fields/number12__c.field-meta.xml
<CustomField>
    <fullName>number12__c</fullName>
    <label>Number12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>