force-app/main/default/objects/vaultc3__c/fields/number13__c.field-meta.xml
<CustomField>
    <fullName>number13__c</fullName>
    <label>Number13</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>