force-app/main/default/objects/vaultc3__c/fields/percent4__c.field-meta.xml
<CustomField>
    <fullName>percent4__c</fullName>
    <label>Percent4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>