force-app/main/default/objects/vaultc3__c/fields/phone8__c.field-meta.xml
<CustomField>
    <fullName>phone8__c</fullName>
    <label>Phone8</label>
    <type>Phone</type>
</CustomField>