force-app/main/default/objects/vaultc3__c/fields/richtextArea2__c.field-meta.xml
<CustomField>
    <fullName>richtextArea2__c</fullName>
    <label>richTextArea2</label>
    <type>TextArea</type>
</CustomField>