force-app/main/default/objects/vaultc3__c/fields/text16__c.field-meta.xml
<CustomField>
    <fullName>text16__c</fullName>
    <label>Text16</label>
    <length>255</length>
    <type>Text</type>
</CustomField>