force-app/main/default/objects/vaultc3__c/fields/text17__c.field-meta.xml
<CustomField>
    <fullName>text17__c</fullName>
    <label>Text17</label>
    <length>255</length>
    <type>Text</type>
</CustomField>