force-app/main/default/objects/vaultc3__c/fields/text18__c.field-meta.xml
<CustomField>
    <fullName>text18__c</fullName>
    <label>Text18</label>
    <length>255</length>
    <type>Text</type>
</CustomField>