force-app/main/default/objects/vaultc3__c/fields/textArea2__c.field-meta.xml
<CustomField>
    <fullName>textArea2__c</fullName>
    <label>TextArea2</label>
    <type>TextArea</type>
</CustomField>