force-app/main/default/objects/vaultc3__c/fields/url4__c.field-meta.xml
<CustomField>
    <fullName>url4__c</fullName>
    <label>URL4</label>
    <type>Url</type>
</CustomField>