force-app/main/default/objects/vaultc3__c/fields/url8__c.field-meta.xml
<CustomField>
    <fullName>url8__c</fullName>
    <label>URL8</label>
    <type>Url</type>
</CustomField>